--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "animated": "^0.2.2",
     "flow-bin": "^0.80.0",
+    "formik": "^1.3.2",
     "prismic-dom": "^2.1.0",
     "prismic-javascript": "^1.5.0-beta.4",
     "prismic-reactjs": "^0.3.1",
@@ -15,7 +16,8 @@
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.5.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "yup": "^0.26.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
