--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prismic-dom": "^2.1.0",
     "prismic-javascript": "^1.5.0-beta.4",
     "prismic-reactjs": "^0.3.1",
+    "ramda": "^0.26.1",
     "react": "^16.7.0-alpha.2",
     "react-css-transition-replace": "^3.0.3",
     "react-dom": "^16.7.0-alpha.2",
