--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animated": "^0.2.2",
+    "firebase": "^5.7.0",
     "flow-bin": "^0.80.0",
     "formik": "^1.3.2",
     "prismic-dom": "^2.1.0",
