--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-hash-link": "^1.2.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.1.2",
     "react-transition-group": "^2.5.0",
     "styled-components": "^3.3.3",
     "yup": "^0.26.6"
